# libming

./: .cvsignore  .gitignore  .travis.yml  AUTHORS  CHANGES  CREDITS  ChangeLog  HISTORY  INSTALL  INSTALL.txt  Makefile  Makefile-real  Makefile.am  Makefile.config.in  NEWS  README  RELEASE  Rules.make  Rules.make.in  TODO  autogen.sh  config.make  config.make.in  configure  configure.ac  configure.in  ming.h  ming.i  ming.spec.in  ming_wrap.c  mingpp.h
docs/man/: Makefile  Makefile.am  Ming_getScale.3  Ming_init.3  Ming_setCubicThreshold.3  Ming_setErrorFunction.3  Ming_setSWFCompression.3  Ming_setScale.3  Ming_setWarnFunction.3  Ming_useSWFVersion.3  SWFAction_compile.3  SWFAction_getByteCode.3  SWFAction_setDebug.3  SWFBlockList_getLastBlock.3  SWFBlock_isCharacter.3  SWFButtonRecord_addFilter.3  SWFButtonRecord_setBlendMode.3  SWFButton_addAction.3  SWFButton_addCharacter.3  SWFButton_addShape.3  SWFButton_removeScalingGrid.3  SWFButton_setScalingGrid.3  SWFCXform_setColorAdd.3  SWFCXform_setColorMult.3  SWFCharacter_getHeight.3  SWFCharacter_getWidth.3  SWFDisplayItem_addFilter.3  SWFDisplayItem_cacheAsBitmap.3  SWFDisplayItem_flush.3  SWFDisplayItem_get_x.3  SWFDisplayItem_setBlendMode.3  SWFDisplayItem_setMaskLevel.3  SWFDisplayItem_setName.3  SWFFontCharacter_addAllChars.3  SWFFontCharacter_addChars.3  SWFFontCharacter_addUTF8Chars.3  SWFFont_getScaledAscent.3  SWFGradient_addEntry.3  SWFGradient_setFocalPoint.3  SWFGradient_setInterpolationMode.3  (+161 more)
perl_ext/: .cvsignore  Action.xs  BinaryData.xs  Bitmap.xs  Blur.xs  BrowserFont.xs  Button.xs  ButtonRecord.xs  CREDITS  CXform.xs  Changes  Character.xs  Constants.xs  DisplayItem.xs  Exports.c  Fill.xs  Filter.xs  FilterMatrix.xs  Font.xs  FontCharacter.xs  FontCollection.xs  Gradient.xs  InitAction.xs  MANIFEST  Makefile  Makefile.PL  Makefile.am  Matrix.xs  Morph.xs  Movie.xs  MovieClip.xs  PrebuiltClip.xs  README  SUPPORT  SWF.pm  SWF.pm.in  SWF.xs  Shadow.xs  Shape.xs  Sound.xs  (+14 more)
perl_ext/SWF/: .cvsignore  Action.pm  BinaryData.pm  Bitmap.pm  Blur.pm  BrowserFont.pm  Button.pm  ButtonRecord.pm  CXform.pm  Character.pm  Constants.pm  DisplayItem.pm  Fill.pm  Filter.pm  FilterMatrix.pm  Font.pm  FontCharacter.pm  FontCollection.pm  Gradient.pm  InitAction.pm  Matrix.pm  Morph.pm  Movie.pm  MovieClip.pm  PrebuiltClip.pm  Shadow.pm  Shape.pm  Sound.pm  SoundInstance.pm  SoundStream.pm  Sprite.pm  Text.pm  TextField.pm  VideoStream.pm
perl_ext/common/: README  _sans.fdb  flowers.msk
perl_ext/examples/: action.cgi  alphafill.cgi  animation.cgi  glyph.cgi  jpegfill.cgi  keypress.cgi  morph.cgi  shape.cgi  sound.cgi  sprite.cgi  text.cgi  textfield.cgi  video.cgi
perl_ext/t/: .cvsignore  .gitignore  00_basic.t  01_shape.t  03_movie.t  button.t  drag.t  fill.t  filljpeg.t  gradient.t  movieclip.t  png.t  sound.t  sprite.t
php_ext/: .cvsignore  .gitignore  MANIFEST  Makefile  Makefile.am  README  README.PHP4  README.PHP5  config.m4  make_module.sh  ming-dev.c  ming-streams.c  ming.c  php_ming.h
py_ext/: .cvsignore  .gitignore  INSTALL  MANIFEST  Makefile  Makefile.am  README  TODO  ming-py3.py  ming.i  ming.py  ming_wrap.c  ming_wrap.doc  mingc.def  mingc.py  setup.py  setup.py.in  shape.py  test.py
py_ext/Zwiff/: .cvsignore  README.txt  __init__.py  setFlags.py
src/: .cvsignore  .gitignore  Makefile  Makefile.am  abctypes.h  actiontypes.h  blocklist.c  blocklist.h  blocktypes.h  compat.c  displaylist.c  displaylist.h  fill.c  fill.h  font_util.c  font_util.h  gc.c  gc.h  libming.h  libming.pc.in  mem.c  mem.h  ming.c  ming.h  ming.h.in  ming_config.h  ming_config.h.in  movie.c  movie.h  movieclip.c  movieclip.h  position.c  position.h  read.c  shape_cubic.c  shape_cubic.h  shape_util.c  shape_util.h  test.c  text_util.c  (+1 more)
src/actioncompiler/: .cvsignore  .gitignore  Makefile  Makefile.am  action.h  assembler.c  assembler.h  compile.c  compile.h  compileaction.c  compiler.flex  compiler.tab.c  compiler.tab.h  compiler.y  lex.yy.c  listaction.c  main.c  oldcompiler.flex  oldcompiler.y  swf4compiler.flex  swf4compiler.y  swf5compiler.flex  swf5compiler.y
src/blocks/: .cvsignore  Makefile  Makefile.am  action.c  action.h  binary.c  bitmap.c  bitmap.h  block.c  block.h  blocktypes.h  browserfont.c  browserfont.h  button.c  button.h  character.c  character.h  cxform.c  cxform.h  dbl.c  dbl.h  error.c  error.h  exports.h  fdbfont.c  fdbfont.h  fileattrs.c  fileattrs.h  fillstyle.c  fillstyle.h  filter.c  filter.h  flv.c  flv.h  font.c  font.h  fontinfo.c  fontinfo.h  fromswf.c  fromswf.h  (+66 more)
tcl_ext/: .cvsignore  MANIFEST  Makefile  Makefile.am  Makefile.in  README  test.tcl
test/: Makefile  Makefile.am  Makefile.inc  README  TODO  TestList  dotests  dotests.in  dotests.pl  find_misdistributed  find_missing  run_test.c  run_test.h
test/Action/: Makefile.am  TestList  test01-cxx.C  test01.c  test01.php  test01.pl  test01.py  test01.ref  test02-cxx.C  test02.c  test02.php  test02.pl  test02.ref
test/Bitmap/: Makefile.am  TestList  test01-cxx.C  test01.c  test01.php  test01.pl  test01.py  test01.ref  test02-cxx.C  test02.c  test02.php  test02.pl  test02.py  test02.ref
test/BrowserFont/: .gitignore  Makefile.am  TestList  test01-cxx.C  test01.c  test01.php  test01.pl  test01.py  test01.ref
test/Button/: .cvsignore  Makefile.am  TestList  test01-cxx.C  test01.c  test01.ref  test02-cxx.C  test02.c  test02.php  test02.pl  test02.ref  test03-cxx.C  test03.c  test03.pl  test03.ref
test/FillStyle/: .cvsignore  .gitignore  Makefile.am  TestList  test01-cxx.C  test01.c  test01.php  test01.pl  test01.py  test01.ref  test02-cxx.C  test02.c  test02.php  test02.pl  (+33 more)
util/: .cvsignore  .gitignore  Makefile  Makefile.am  README  TIPS  TODO  action.c  action.h  bindump.c  blocktypes.c  blocktypes.h  cws2fws  dbl2png.c  decompile.c  decompile.h  decompile4.c  decompile5.c  gif2dbl.c  gif2mask.c  img2swf.c  listfdb.c  listmp3.c  listswf.c  main.c  makefdb.c  makeswf.c  makeswf.h  makeswf_utils.c  ming-config.in  ming.css  output.h  outputdecl.h  outputfdb.c  outputscript.c  outputswf.c  outputtxt.c  parser.c  parser.h  parserdecl.h  (+16 more)
(+1010 files in other folders)
